feat: update owners to version 3